# flowrs-ai

./: Cargo.toml  flowrs-ai.json
onnx_wasm/: Cargo.toml  index.html
onnx_wasm/src/: lib.rs
onnx_wasm/src/nodes/: clustering.rs  model.rs
src/: lib.rs  nodes.rs
src/nodes/: ArrayReshapeNode.rs  ImageScalingNode.rs  PreproccessingNode.rs  array_reshape.rs  cluster.rs  clustering.rs  converter.rs  convertndarray2datasetbase.rs  csv2array.rs  csv2arrayn.rs  csvToArrayN.rs  csvToDsBWithStringEncoder.rs  csv_to_array.rs  csvtodatasetbase.rs  dbscan.rs  diffusionmap.rs  diffusionmap_test_node.rs  dimension_reduction.rs  dimred.rs  dimred_cluster_test_node.rs  image_scaling.rs  kmeans.rs  kmeans_test_node.rs  l1normscaler.rs  l2normscaler.rs  linfa_lib_test_node.rs  maxAbsScaler.rs  max_output_value.rs  maxabsscale.rs  maxnormscaler.rs  minMaxScaler.rs  minmaxscale.rs  minmaxsrangescaler.rs  model.rs  normalize.rs  normscaler.rs  normscaler_test_node.rs  pca.rs  post_processing.rs  pre_processing.rs  (+8 more)
src/nodes/clustering/: dbscan.rs  kmeans.rs
src/nodes/converter/: csv2dataset.rs  csv2dataset_encoding.rs  csv2ndarray.rs  ndarray2dataset.rs
src/nodes/dimension_reduction/: diffusionmap.rs  pca.rs  tsne.rs
src/nodes/post_processing/: max_output_value.rs
src/nodes/scaling/: l1normscaler.rs  l2normscaler.rs  maxabsscaler.rs  maxnormscaler.rs  minmaxrangescaler.rs  minmaxscaler.rs  standardscaler.rs
test/: mod.rs
tests/: benchmark_python.py  benchmark_pythorch.py  benchmarks.rs  evaluation.ipynb  evaluation_test.rs  flowrs-ai_runtime_test.http  integration_tests.rs  result_evaluation.rs  result_records.csv  test_ImageScaling.rs  test_camerawithonnx.rs  test_connect.rs  test_image_scaling.rs  test_max_output_value.rs  test_model.rs  test_preproccessing.rs  test_reshape.rs  test_squeezenet_flow.rs
tests/flowrs_ai_test/: Cargo.toml
tests/test_files/: result_targets.csv
tests/wasm/: flowrs-ai_test.http
