[package]

name = "flowrs-ai"
version = "0.1.0"
edition = "2021"
authors = ["wuermseer.florian@gmail.com", "markus.friedrich@hm.edu"]
description = "data visualization algorithms for the flowrs library."
repository = "https://github.com/flow-rs/flowrs-ai"
license = "Apache-2.0"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/flowrs-ai"
keywords = ["flow", "deep learning", "machine learning", "clustering"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# crate-type = ["cdylib", "rlib"]

#[[bin]]


[dependencies]
anyhow = "1.0.72"
flowrs = {path = "../flowrs"}  # "0.1.0"
flowrs-std = {path = "../flowrs-std"}  # "0.1.0"
serde = "1.0.183"
serde_json = "1.0"
image = "0.24.7"
ndarray = "0.15.6"
csv = "1.1"
ndarray-csv = "0.5.2"
linfa = "0.7.0"
linfa-preprocessing = "0.7.0"
linfa-reduction = "0.7.0"
linfa-clustering = "0.7.0"
nshare = "0.9.0"
wasm-bindgen = "0.2.87"
linfa-nn = "0.7.0"
linfa-kernel = "0.7.0"
linfa-tsne = "0.7.0"
statrs = "0.15"
log = "0.4.0"
env_logger = "0.10.1"

#[dev-dependencies]
#wasm-bindgen-test = "0.3.37"
