[package]
 name = "flowrs_ai_test" 
 version = "1.0.0"
edition = "2021"

[dependencies]
flowrs = {path = "../../../flowrs"}
flowrs-std = {path = "../../../flowrs-std"}
flowrs-ai = {path = "../../../flowrs-ai"}
wasm-bindgen = "0.2.87"
serde_json = "1.0.105"
linfa = "0.7.0"
ndarray = "0.15.6"

[lib]
crate-type = ["cdylib"]